--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.3.4",
@@ -23,6 +23,5 @@
     "@vitejs/plugin-react": "^3.1.0",
     "gh-pages": "^5.0.0",
     "vite": "^4.2.0"
-  },
-  "homepage": "https://marcom3l0.github.io/Cat-as-Service-Web/"
+  }
 }
